--- a/Birch.Swagger.ProxyGenerator/Birch.Swagger.ProxyGenerator.csproj
+++ b/Birch.Swagger.ProxyGenerator/Birch.Swagger.ProxyGenerator.csproj
@@ -67,6 +67,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Compile Include="Generator\Enum.cs" />
+    <Content Include="SwaggerProxy.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Swagger\ClassDefinition.cs" />
     <Compile Include="Swagger\Operation.cs" />
     <Compile Include="Swagger\Parameter.cs" />
