OSI-14: Updated filename to match class name.

--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.csproj
@@ -72,7 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IAutfacWebProxy.cs" />
+    <Compile Include="IAutofacIntegrationTestWebProxy.cs" />
     <Compile Include="AutofacIntegrationTestBaseProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutofacWebProxyExtensions.cs" />
