OSI-14: Removed nuget packages and fixed bug in proxy generator that did not allow you to use a BaseUrl.

--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.csproj
@@ -36,10 +36,6 @@
       <HintPath>..\..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest">
-      <HintPath>..\Birch.Swagger.ProxyGenerator.IntegrationTest\bin\Debug\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
       <Private>True</Private>
@@ -52,10 +48,6 @@
       <HintPath>..\..\packages\Microsoft.Owin.Testing.3.0.1\lib\net45\Microsoft.Owin.Testing.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
@@ -66,10 +58,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
@@ -90,7 +78,14 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Birch.Swagger.ProxyGenerator.config.json" />
+    <None Include="build\Birch.Swagger.ProxyGenerator.props" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Birch.Swagger.ProxyGenerator.IntegrationTest\Birch.Swagger.ProxyGenerator.IntegrationTest.csproj">
+      <Project>{a5627dba-48c0-43b9-824d-495ff9743d7d}</Project>
+      <Name>Birch.Swagger.ProxyGenerator.IntegrationTest</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
