--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog.csproj
@@ -37,11 +37,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest">
-      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.1.0.39-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
+      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.1.0.40-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac">
-      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.1.0.39-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.dll</HintPath>
+      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.1.0.40-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin">
@@ -54,6 +54,10 @@
     </Reference>
     <Reference Include="Microsoft.Owin.Testing">
       <HintPath>..\..\packages\Microsoft.Owin.Testing.3.0.1\lib\net45\Microsoft.Owin.Testing.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Owin">
@@ -69,11 +73,15 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Shouldly">
-      <HintPath>..\..\packages\Shouldly.2.6.0\lib\net40\Shouldly.dll</HintPath>
+      <HintPath>..\..\packages\Shouldly.2.7.0\lib\net40\Shouldly.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
       <Private>True</Private>
@@ -96,6 +104,7 @@
   <ItemGroup>
     <Compile Include="SerilogWebProxyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwaggerProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Birch.Swagger.ProxyGenerator.config.json" />
@@ -103,6 +112,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
