--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/packages.config
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/packages.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
-  <package id="Birch.Swagger.ProxyGenerator.IntegrationTest" version="1.0.39-alpha" targetFramework="net452" />
-  <package id="Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac" version="1.0.39-alpha" targetFramework="net452" />
+  <package id="Birch.Swagger.ProxyGenerator" version="1.0.40-alpha" targetFramework="net452" />
+  <package id="Birch.Swagger.ProxyGenerator.IntegrationTest" version="1.0.40-alpha" targetFramework="net452" />
+  <package id="Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac" version="1.0.40-alpha" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
   <package id="Serilog" version="1.5.14" targetFramework="net452" />
-  <package id="Shouldly" version="2.6.0" targetFramework="net452" />
+  <package id="Shouldly" version="2.7.0" targetFramework="net452" />
 </packages>
