--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest">
-      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.1.0.39-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
+      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.1.0.40-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin">
@@ -48,16 +48,24 @@
       <HintPath>..\..\packages\Microsoft.Owin.Testing.3.0.1\lib\net45\Microsoft.Owin.Testing.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Shouldly">
-      <HintPath>..\..\packages\Shouldly.2.6.0\lib\net40\Shouldly.dll</HintPath>
+      <HintPath>..\..\packages\Shouldly.2.7.0\lib\net40\Shouldly.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
@@ -88,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoRollbackAttribute.cs" />
+    <Compile Include="SwaggerProxy.cs" />
     <Compile Include="XUnitWebProxyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -97,6 +106,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.1.0.40-alpha\build\Birch.Swagger.ProxyGenerator.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
