--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit/packages.config
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit/packages.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Birch.Swagger.ProxyGenerator.IntegrationTest" version="1.0.39-alpha" targetFramework="net452" />
+  <package id="Birch.Swagger.ProxyGenerator" version="1.0.40-alpha" targetFramework="net452" />
+  <package id="Birch.Swagger.ProxyGenerator.IntegrationTest" version="1.0.40-alpha" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="Shouldly" version="2.6.0" targetFramework="net452" />
+  <package id="Shouldly" version="2.7.0" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
