--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac/Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.csproj
@@ -37,7 +37,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.2.0.5-alpha\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
+      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.2.0.7\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -88,18 +88,17 @@
     <Compile Include="AutofacWebProxyExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="Birch.Swagger.ProxyGenerator.config.json" />
     <None Include="build\Birch.Swagger.ProxyGenerator.props" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.2.0.5-alpha\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.5-alpha\build\Birch.Swagger.ProxyGenerator.targets')" />
+  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.5-alpha\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.2.0.5-alpha\build\Birch.Swagger.ProxyGenerator.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
