OSI-14: Fixed AutoRunOnBuild bug and updated nuget packages.

--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit/Birch.Swagger.ProxyGenerator.IntegrationTest.XUnit.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoRollbackAttribute.cs" />
+    <Compile Include="SwaggerProxy.cs" />
     <Compile Include="XUnitWebProxyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
