--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="SerilogWebProxyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwaggerProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Birch.Swagger.ProxyGenerator.config.json" />
