OSI-14: Added proxy generator app config back to solution.

--- a/Birch.Swagger.ProxyGenerator/Birch.Swagger.ProxyGenerator.csproj
+++ b/Birch.Swagger.ProxyGenerator/Birch.Swagger.ProxyGenerator.csproj
@@ -85,6 +85,7 @@
     <Content Include="Birch.Swagger.ProxyGenerator.config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="App.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
