--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest/Birch.Swagger.ProxyGenerator.IntegrationTest.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest/Birch.Swagger.ProxyGenerator.IntegrationTest.csproj
@@ -89,12 +89,12 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets')" />
+  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.2.0.11-alpha\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.11-alpha\build\Birch.Swagger.ProxyGenerator.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.2.0.7\build\Birch.Swagger.ProxyGenerator.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.11-alpha\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.2.0.11-alpha\build\Birch.Swagger.ProxyGenerator.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
