OSI-15: set SwaggerProxy.cs to be content.

--- a/Birch.Swagger.ProxyGenerator/Birch.Swagger.ProxyGenerator.csproj
+++ b/Birch.Swagger.ProxyGenerator/Birch.Swagger.ProxyGenerator.csproj
@@ -64,7 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Generator\Enum.cs" />
-    <Compile Include="SwaggerProxy.cs" />
+    <Content Include="SwaggerProxy.cs" />
     <Compile Include="Swagger\ClassDefinition.cs" />
     <Compile Include="Swagger\Operation.cs" />
     <Compile Include="Swagger\Parameter.cs" />
