OSI-15: Making 3.0.0 release. - Updated nuget packages in all projects to latest version of proxy generator - Added SwaggerProxy.cs to gitignore. - Updated minimum package versions in nuspec

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## Birch specific entries
 !/lib/*
 .VS/**
+**/SwaggerProxy.cs
 
 # The MSBuild.Community.Tasks.dll is not stored in the packages folder
 # but is copied to the .build folder with the solution.
