--- a/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog.csproj
+++ b/src/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog/Birch.Swagger.ProxyGenerator.IntegrationTest.Serilog.csproj
@@ -36,12 +36,12 @@
       <HintPath>..\..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.2.0.13\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
+    <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest">
+      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.2.0.21\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.2.0.13\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.dll</HintPath>
+    <Reference Include="Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac">
+      <HintPath>..\..\packages\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.2.0.21\lib\net45\Birch.Swagger.ProxyGenerator.IntegrationTest.Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin">
@@ -112,12 +112,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.2.0.13\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.13\build\Birch.Swagger.ProxyGenerator.targets')" />
+  <Import Project="..\..\packages\Birch.Swagger.ProxyGenerator.2.0.21\build\Birch.Swagger.ProxyGenerator.targets" Condition="Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.21\build\Birch.Swagger.ProxyGenerator.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.13\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.2.0.13\build\Birch.Swagger.ProxyGenerator.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Birch.Swagger.ProxyGenerator.2.0.21\build\Birch.Swagger.ProxyGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Birch.Swagger.ProxyGenerator.2.0.21\build\Birch.Swagger.ProxyGenerator.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
